# flat-theory

./: Makefile  README.md  _CoqProject  dune-project  flake.nix  flat.opam  release.nix
.github/workflows/: build.yml
theories/: access.v  charsets.v  derivatives.v  dune  elements.v  find.v  infer.v  infer_slice.v  inference.v  intervals.v  lang_infer.v  lang_refine.v  lemma_infer.v  narrowing.v  ranges.v  regexes.v  split_regex.v  strings.v  synth_prefix.v  util.v
